# find-api

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  api_sniffer.py  build.bat  dns_monitor.py  hook_config.example.json  index.html  package-lock.json  package.json  patch_target.py  player_api.js  player_api.py  profile_api_hunter.js  profile_api_tester.js  run_api_hunter.bat  screen1.html  screen2.html  session.txt  where_winds_meet_api_plan.md  where_winds_meet_china_plan.md  where_winds_meet_profile_analysis.md  where_winds_meet_stealth_plan.md
.github/workflows/: build-hook.yml
Scripts/: analyze_lua_loader.py  api_logger.lua  face_share_logger.lua  inspect_filepicker_object.js  inspect_player_face.js  parse_filepicker_capture.js  player_lookup.lua  prepare_cn_to_global.py  scan_runtime_sigs.py  verify_lua_loader.py
docs/: C6_LUA_LOADER_ANALYSIS.md  C6_UPLOAD_STATIC_TRACE.md  HOOK_FACE_SHARE_CAPTURE.md
hook/: GameHook.dll.bak_yysls  Injector.exe.bak_yysls
hook cn/Scripts/: api_logger.lua  find_search_endpoint.lua
hook/Scripts/: api_logger.lua  session_capture.lua
src/: dllmain.cpp  injector.cpp  lua_signature_probe_main.cpp  pattern_scan.h
src/config/: regions.js
src/hook/: capture_writer.cpp  capture_writer.h  config.cpp  config.h  lua_hook_state.h  lua_runtime_hook.cpp  lua_runtime_hook.h  lua_signature_probe.cpp  lua_signature_probe.h  lua_signatures.h  redact.cpp  redact.h  sha256.h  winhttp_capture.cpp  winhttp_capture.h
src/parsers/: faceDataParser.js  shortCodeParser.js
src/storage/: database.js  migrations.js
src/storage/repositories/: aliasRepository.js  codeRepository.js  faceRepository.js  sourceRepository.js  uploadJobRepository.js
src/utils/: hash.js  logger.js  redact.js
src/wwm/: app.js  client.js  errors.js  server.js  session.js
src/wwm/routes/: faceCacheRoute.js  faceInventoryRoute.js  faceResolveRoute.js
src/wwm/services/: cacheIngestService.js  cacheLookupService.js  faceService.js  filePickerCaptureParser.js  filePickerDownloadService.js  filePickerMetaService.js  filePickerTokenProvider.js  filePickerUploadRequestBuilder.js  inventoryService.js  playerService.js  shortCodeResolveService.js
test/: cache.test.js  cn_to_global.test.js  filepicker_meta.test.js  hardening.test.js  hook_redact.test.js  inventory.test.js  lua_capture_state.test.js  lua_loader_analysis.test.js  parsers.test.js  resolve.test.js  upload_capture.test.js
